# LAB_FundamentosDados_G7

./: .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_logs.txt  pyproject.toml
airflow/: Dockerfile  requirements.txt
airflow/dags/: el_raw_dag.py  omdb_pipeline.py
backups/: restore.sql
dbt/: .user.yml  dbt_project.yml  profiles.yml  schema.yml
dbt/models/: profiles.yml
dbt/models/marts/: gold.dim_albums.sql  gold.dim_artists.sql  gold.fact_tracks.sql  marts.yml
extraction/: __main__.py  db.py  el_raw.py  settings.py
great_expectations/expectations/: .ge_store_backend_id
init/: 01-airflow-db.sh  01-setup.sh  restore.sh
metabase/metabase.db/metabase.db/: metabase.db.trace.db
scripts/: validate_raw.py
