[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "LAB_FundamentosDados_G7"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Vitor L. Ribeiro", email = "vitor.ribeiro.swe@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["pandas>=3.0.2", "sqlalchemy", "psycopg2-binary", "python-dotenv", "ruff>=0.15.11"]

[tool.setuptools.packages.find]
include = ["extraction*"]

[project.scripts]
el-raw = "extraction.el_raw:run_extraction"
[tool.pdm]
distribution = false
